--- a/servicio-items-dev.properties
+++ b/servicio-items-dev.properties
@@ -1,4 +1,4 @@
-configuracion.texto=Configurando ambiente de DEV
+configuracion.texto=Configurando ambiente de DEVS
 configuracion.autor=Bralio Fernando Cusco Mejia
 configuracion.email=cuzcator@gmail.com
 configuracion.version=1.0.0
